--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,11 @@ SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_SERVICE_KEY=your-service-role-key
 SUPABASE_ANON_KEY=your-anon-key
 
-# Authentication
+# Authentication (Better Auth)
 JWT_SECRET=your-jwt-secret-key-change-in-production
+AUTH_SECRET=your-auth-secret-key-change-in-production
+BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:3000
 
 # CORS
 ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-domain.vercel.app
@@ -17,3 +20,11 @@ ALLOWED_ORIGINS=http://localhost:3000,https://your-frontend-domain.vercel.app
 # API Configuration
 API_VERSION=v1
 API_PREFIX=/api
+
+# SMTP / Email Configuration (for email verification & password reset)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-password
+SMTP_FROM="Real Estate CRM <noreply@realestate.com>"
