--- a/package.json
+++ b/package.json
@@ -29,14 +29,19 @@
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.1",
     "@supabase/supabase-js": "^2.49.1",
+    "bcryptjs": "^3.0.3",
+    "better-auth": "^1.3.34",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "hono": "^4.6.14",
+    "nodemailer": "^7.0.10",
     "postgres": "^3.4.5",
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22.10.2",
+    "@types/nodemailer": "^7.0.3",
     "@typescript-eslint/eslint-plugin": "^8.19.1",
     "@typescript-eslint/parser": "^8.19.1",
     "drizzle-kit": "^0.30.1",
