--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@hono/node-server": "^1.13.7",
     "@hono/zod-validator": "^0.4.1",
     "@supabase/supabase-js": "^2.49.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "bcryptjs": "^3.0.3",
     "better-auth": "^1.3.34",
     "dotenv": "^16.4.7",
     "drizzle-orm": "^0.38.3",
     "hono": "^4.6.14",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^7.0.10",
     "postgres": "^3.4.5",
     "zod": "^3.24.1"
